--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Certificates App</title>
     <script type="module" crossorigin src="/assets/index.8a38d844.js"></script>
     <link rel="modulepreload" href="/assets/vendor.7b3e43ff.js">
